--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,37 @@
 language: cpp
 
-os: linux
+sudo: false
 
-compiler:
-  - gcc
-  - clang
+git:
+  depth: 1
 
-before_install:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; 
-    then
-        sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test;
-        sudo add-apt-repository --yes ppa:h-rayflood/llvm;
-        sudo add-apt-repository --yes ppa:andykimpe/cmake;
-        sudo apt-get update -qq;
-        sudo apt-get install -qq cmake;
-        sudo apt-get install -qq $SUPPORT;
-        sudo apt-get install -qq $PACKAGE;
-    fi
-  #setup compiler
-  - export CC=${REAL_CC} CXX=${REAL_CXX}
-
+cache:
+  - apt
+  - directories:
+      - $HOME/cmake
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    
 script:
+  #cmake 
+  - mkdir -p $HOME/cmake
+  - wget http://www.cmake.org/files/v3.1/cmake-3.1.3-Linux-x86_64.tar.gz
+  - tar -xzf cmake-3.1.3-Linux-x86_64.tar.gz
+  - export CMAKE_CMD=`pwd`/cmake-3.1.3-Linux-x86_64/bin/cmake
+  #fuzzylite
+  #release
   - cd fuzzylite
-  - mkdir -p $FL_CONF
-  - cd $FL_CONF
-  - cmake .. -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=$FL_CONF -DFL_BACKTRACE=ON -DFL_USE_FLOAT=$FL_USE_FLOAT -DFL_CPP11=$FL_CPP11
+  - mkdir -p release
+  - cd release
+  - $CMAKE_CMD .. -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DFL_BACKTRACE=ON -DFL_USE_FLOAT=$FL_USE_FLOAT -DFL_CPP11=$FL_CPP11
+  - make
+  - cd ..
+  #debug
+  - mkdir -p debug
+  - cd debug
+  - $CMAKE_CMD .. -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=Debug -DFL_BACKTRACE=ON -DFL_USE_FLOAT=$FL_USE_FLOAT -DFL_CPP11=$FL_CPP11
   - make
 
 env:
@@ -33,127 +40,163 @@ env:
 matrix:
   exclude:
     - env: ignore=this
+  
   include:
 #clang-3.2
-##Debug
-    - compiler: clang
-      env: REAL_CC=clang-3.2 REAL_CXX=clang++-3.2 PACKAGE=clang-3.2 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
-    - compiler: clang
-      env: REAL_CC=clang-3.2 REAL_CXX=clang++-3.2 PACKAGE=clang-3.2 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
-    - compiler: clang
-      env: REAL_CC=clang-3.2 REAL_CXX=clang++-3.2 PACKAGE=clang-3.2 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
-    - compiler: clang
-      env: REAL_CC=clang-3.2 REAL_CXX=clang++-3.2 PACKAGE=clang-3.2 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
-##Release
-    - compiler: clang
-      env: REAL_CC=clang-3.2 REAL_CXX=clang++-3.2 PACKAGE=clang-3.2 SUPPORT=g++-4.8 FL_CONF=Release FL_USE_FLOAT=OFF FL_CPP11=OFF
-    - compiler: clang
-      env: REAL_CC=clang-3.2 REAL_CXX=clang++-3.2 PACKAGE=clang-3.2 SUPPORT=g++-4.8 FL_CONF=Release FL_USE_FLOAT=ON FL_CPP11=OFF
-    - compiler: clang
-      env: REAL_CC=clang-3.2 REAL_CXX=clang++-3.2 PACKAGE=clang-3.2 SUPPORT=g++-4.8 FL_CONF=Release FL_USE_FLOAT=OFF FL_CPP11=ON
-    - compiler: clang
-      env: REAL_CC=clang-3.2 REAL_CXX=clang++-3.2 PACKAGE=clang-3.2 SUPPORT=g++-4.8 FL_CONF=Release FL_USE_FLOAT=ON FL_CPP11=ON
+    - os: linux
+      addons:
+        apt:
+          packages: ['clang-3.2']
+      compiler: clang
+      env: CC=clang-3.2 CXX=clang++-3.2 PACKAGE=clang-3.2 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
+    - os: linux
+      addons:
+        apt:
+          packages: ['clang-3.2']
+      compiler: clang
+      env: CC=clang-3.2 CXX=clang++-3.2 PACKAGE=clang-3.2 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
+    - os: linux
+      addons:
+        apt:
+          packages: ['clang-3.2']
+      compiler: clang
+      env: CC=clang-3.2 CXX=clang++-3.2 PACKAGE=clang-3.2 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
+    - os: linux
+      addons:
+        apt:
+          packages: ['clang-3.2']
+      compiler: clang
+      env: CC=clang-3.2 CXX=clang++-3.2 PACKAGE=clang-3.2 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
 
 #clang-3.3
-##Debug
-    - compiler: clang
-      env: REAL_CC=clang-3.3 REAL_CXX=clang++-3.3 PACKAGE=clang-3.3 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
-    - compiler: clang
-      env: REAL_CC=clang-3.3 REAL_CXX=clang++-3.3 PACKAGE=clang-3.3 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
-    - compiler: clang
-      env: REAL_CC=clang-3.3 REAL_CXX=clang++-3.3 PACKAGE=clang-3.3 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
-    - compiler: clang
-      env: REAL_CC=clang-3.3 REAL_CXX=clang++-3.3 PACKAGE=clang-3.3 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
-##Release
-    - compiler: clang
-      env: REAL_CC=clang-3.3 REAL_CXX=clang++-3.3 PACKAGE=clang-3.3 SUPPORT=g++-4.8 FL_CONF=Release FL_USE_FLOAT=OFF FL_CPP11=OFF
-    - compiler: clang
-      env: REAL_CC=clang-3.3 REAL_CXX=clang++-3.3 PACKAGE=clang-3.3 SUPPORT=g++-4.8 FL_CONF=Release FL_USE_FLOAT=ON FL_CPP11=OFF
-    - compiler: clang
-      env: REAL_CC=clang-3.3 REAL_CXX=clang++-3.3 PACKAGE=clang-3.3 SUPPORT=g++-4.8 FL_CONF=Release FL_USE_FLOAT=OFF FL_CPP11=ON
-    - compiler: clang
-      env: REAL_CC=clang-3.3 REAL_CXX=clang++-3.3 PACKAGE=clang-3.3 SUPPORT=g++-4.8 FL_CONF=Release FL_USE_FLOAT=ON FL_CPP11=ON
+    - os: linux
+      addons:
+        apt:
+          packages: ['clang-3.3']
+      compiler: clang
+      env: CC=clang-3.3 CXX=clang++-3.3 PACKAGE=clang-3.3 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
+    - os: linux
+      addons:
+        apt:
+          packages: ['clang-3.3']
+      compiler: clang
+      env: CC=clang-3.3 CXX=clang++-3.3 PACKAGE=clang-3.3 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
+    - os: linux
+      addons:
+        apt:
+          packages: ['clang-3.3']
+      compiler: clang
+      env: CC=clang-3.3 CXX=clang++-3.3 PACKAGE=clang-3.3 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
+    - os: linux
+      addons:
+        apt:
+          packages: ['clang-3.3']
+      compiler: clang
+      env: CC=clang-3.3 CXX=clang++-3.3 PACKAGE=clang-3.3 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
 
 #clang-3.4
-##Debug
-    - compiler: clang
-      env: REAL_CC=clang-3.4 REAL_CXX=clang++-3.4 PACKAGE=clang-3.4 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
-    - compiler: clang
-      env: REAL_CC=clang-3.4 REAL_CXX=clang++-3.4 PACKAGE=clang-3.4 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
-    - compiler: clang
-      env: REAL_CC=clang-3.4 REAL_CXX=clang++-3.4 PACKAGE=clang-3.4 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
-    - compiler: clang
-      env: REAL_CC=clang-3.4 REAL_CXX=clang++-3.4 PACKAGE=clang-3.4 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
-##Release
-    - compiler: clang
-      env: REAL_CC=clang-3.4 REAL_CXX=clang++-3.4 PACKAGE=clang-3.4 SUPPORT=g++-4.8 FL_CONF=Release FL_USE_FLOAT=OFF FL_CPP11=OFF
-    - compiler: clang
-      env: REAL_CC=clang-3.4 REAL_CXX=clang++-3.4 PACKAGE=clang-3.4 SUPPORT=g++-4.8 FL_CONF=Release FL_USE_FLOAT=ON FL_CPP11=OFF
-    - compiler: clang
-      env: REAL_CC=clang-3.4 REAL_CXX=clang++-3.4 PACKAGE=clang-3.4 SUPPORT=g++-4.8 FL_CONF=Release FL_USE_FLOAT=OFF FL_CPP11=ON
-    - compiler: clang
-      env: REAL_CC=clang-3.4 REAL_CXX=clang++-3.4 PACKAGE=clang-3.4 SUPPORT=g++-4.8 FL_CONF=Release FL_USE_FLOAT=ON FL_CPP11=ON
-
+    - os: linux
+      addons:
+        apt:
+          packages: ['clang-3.4']
+      compiler: clang
+      env: CC=clang-3.4 CXX=clang++-3.4 PACKAGE=clang-3.4 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
+    - os: linux
+      addons:
+        apt:
+          packages: ['clang-3.4']
+      compiler: clang
+      env: CC=clang-3.4 CXX=clang++-3.4 PACKAGE=clang-3.4 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
+    - os: linux
+      addons:
+        apt:
+          packages: ['clang-3.4']
+      compiler: clang
+      env: CC=clang-3.4 CXX=clang++-3.4 PACKAGE=clang-3.4 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
+    - os: linux
+      addons:
+        apt:
+          packages: ['clang-3.4']
+      compiler: clang
+      env: CC=clang-3.4 CXX=clang++-3.4 PACKAGE=clang-3.4 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
 
 #gcc-4.7
-##Debug
-    - compiler: gcc
-      env: REAL_CC=gcc-4.7   REAL_CXX=g++-4.7     PACKAGE=g++-4.7   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
-    - compiler: gcc
-      env: REAL_CC=gcc-4.7   REAL_CXX=g++-4.7     PACKAGE=g++-4.7   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
-    - compiler: gcc
-      env: REAL_CC=gcc-4.7   REAL_CXX=g++-4.7     PACKAGE=g++-4.7   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
-    - compiler: gcc
-      env: REAL_CC=gcc-4.7   REAL_CXX=g++-4.7     PACKAGE=g++-4.7   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
-##Release
-    - compiler: gcc
-      env: REAL_CC=gcc-4.7   REAL_CXX=g++-4.7     PACKAGE=g++-4.7   SUPPORT=    FL_CONF=Release FL_USE_FLOAT=OFF FL_CPP11=OFF
-    - compiler: gcc
-      env: REAL_CC=gcc-4.7   REAL_CXX=g++-4.7     PACKAGE=g++-4.7   SUPPORT=    FL_CONF=Release FL_USE_FLOAT=ON FL_CPP11=OFF
-    - compiler: gcc
-      env: REAL_CC=gcc-4.7   REAL_CXX=g++-4.7     PACKAGE=g++-4.7   SUPPORT=    FL_CONF=Release FL_USE_FLOAT=OFF FL_CPP11=ON
-    - compiler: gcc
-      env: REAL_CC=gcc-4.7   REAL_CXX=g++-4.7     PACKAGE=g++-4.7   SUPPORT=    FL_CONF=Release FL_USE_FLOAT=ON FL_CPP11=ON
+    - os: linux
+      addons:
+        apt:
+          packages: ['g++-4.7']
+      compiler: gcc
+      env: CC=gcc-4.7   CXX=g++-4.7     PACKAGE=g++-4.7   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
+    - os: linux
+      addons:
+        apt:
+          packages: ['g++-4.7']
+      compiler: gcc
+      env: CC=gcc-4.7   CXX=g++-4.7     PACKAGE=g++-4.7   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
+    - os: linux
+      addons:
+        apt:
+          packages: ['g++-4.7']
+      compiler: gcc
+      env: CC=gcc-4.7   CXX=g++-4.7     PACKAGE=g++-4.7   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
+    - os: linux
+      addons:
+        apt:
+          packages: ['g++-4.7']
+      compiler: gcc
+      env: CC=gcc-4.7   CXX=g++-4.7     PACKAGE=g++-4.7   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
 
 #gcc-4.8
-##Debug
-    - compiler: gcc
-      env: REAL_CC=gcc-4.8   REAL_CXX=g++-4.8     PACKAGE=g++-4.8   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
-    - compiler: gcc
-      env: REAL_CC=gcc-4.8   REAL_CXX=g++-4.8     PACKAGE=g++-4.8   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
-    - compiler: gcc
-      env: REAL_CC=gcc-4.8   REAL_CXX=g++-4.8     PACKAGE=g++-4.8   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
-    - compiler: gcc
-      env: REAL_CC=gcc-4.8   REAL_CXX=g++-4.8     PACKAGE=g++-4.8   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
-##Release
-    - compiler: gcc
-      env: REAL_CC=gcc-4.8   REAL_CXX=g++-4.8     PACKAGE=g++-4.8   SUPPORT=    FL_CONF=Release FL_USE_FLOAT=OFF FL_CPP11=OFF
-    - compiler: gcc
-      env: REAL_CC=gcc-4.8   REAL_CXX=g++-4.8     PACKAGE=g++-4.8   SUPPORT=    FL_CONF=Release FL_USE_FLOAT=ON FL_CPP11=OFF
-    - compiler: gcc
-      env: REAL_CC=gcc-4.8   REAL_CXX=g++-4.8     PACKAGE=g++-4.8   SUPPORT=    FL_CONF=Release FL_USE_FLOAT=OFF FL_CPP11=ON
-    - compiler: gcc
-      env: REAL_CC=gcc-4.8   REAL_CXX=g++-4.8     PACKAGE=g++-4.8   SUPPORT=    FL_CONF=Release FL_USE_FLOAT=ON FL_CPP11=ON
-      
+    - os: linux
+      addons:
+        apt:
+          packages: ['g++-4.8']
+      compiler: gcc
+      env: CC=gcc-4.8   CXX=g++-4.8     PACKAGE=g++-4.8   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
+    - os: linux
+      addons:
+        apt:
+          packages: ['g++-4.8']
+      compiler: gcc
+      env: CC=gcc-4.8   CXX=g++-4.8     PACKAGE=g++-4.8   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
+    - os: linux
+      addons:
+        apt:
+          packages: ['g++-4.8']
+      compiler: gcc
+      env: CC=gcc-4.8   CXX=g++-4.8     PACKAGE=g++-4.8   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
+    - os: linux
+      addons:
+        apt:
+          packages: ['g++-4.8']
+      compiler: gcc
+      env: CC=gcc-4.8   CXX=g++-4.8     PACKAGE=g++-4.8   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
+
 #gcc-5
-##Debug
-    - compiler: gcc
-      env: REAL_CC=gcc-5   REAL_CXX=g++-5     PACKAGE=g++-5   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
-    - compiler: gcc
-      env: REAL_CC=gcc-5   REAL_CXX=g++-5     PACKAGE=g++-5   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
-    - compiler: gcc
-      env: REAL_CC=gcc-5   REAL_CXX=g++-5     PACKAGE=g++-5   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
-    - compiler: gcc
-      env: REAL_CC=gcc-5   REAL_CXX=g++-5     PACKAGE=g++-5   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
-##Release
-    - compiler: gcc
-      env: REAL_CC=gcc-5   REAL_CXX=g++-5     PACKAGE=g++-5   SUPPORT=    FL_CONF=Release FL_USE_FLOAT=OFF FL_CPP11=OFF
-    - compiler: gcc
-      env: REAL_CC=gcc-5   REAL_CXX=g++-5     PACKAGE=g++-5   SUPPORT=    FL_CONF=Release FL_USE_FLOAT=ON FL_CPP11=OFF
-    - compiler: gcc
-      env: REAL_CC=gcc-5   REAL_CXX=g++-5     PACKAGE=g++-5   SUPPORT=    FL_CONF=Release FL_USE_FLOAT=OFF FL_CPP11=ON
-    - compiler: gcc
-      env: REAL_CC=gcc-5   REAL_CXX=g++-5     PACKAGE=g++-5   SUPPORT=    FL_CONF=Release FL_USE_FLOAT=ON FL_CPP11=ON
+    - os: linux
+      addons:
+        apt:
+          packages: ['g++-5']
+      compiler: gcc
+      env: CC=gcc-5   CXX=g++-5     PACKAGE=g++-5   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
+    - os: linux
+      addons:
+        apt:
+          packages: ['g++-5']
+      compiler: gcc
+      env: CC=gcc-5   CXX=g++-5     PACKAGE=g++-5   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
+    - os: linux
+      addons:
+        apt:
+          packages: ['g++-5']
+      compiler: gcc
+      env: CC=gcc-5   CXX=g++-5     PACKAGE=g++-5   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
+    - os: linux
+      addons:
+        apt:
+          packages: ['g++-5']
+      compiler: gcc
+      env: CC=gcc-5   CXX=g++-5     PACKAGE=g++-5   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
 
 
 notifications:
