--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ addons:
   apt:
     sources: 
       - ubuntu-toolchain-r-test
-      - llvm-toolchain-precise-3.5
+      - llvm-toolchain-precise-3.6
     packages: 
       - ['g++-5', 'g++-4.9', 'g++-4.8']
-      - ['clang-3.5'] 
+      - ['clang-3.6'] 
 #, ['clang-3.6', 'clang-3.5']
     
 before_install:
@@ -61,33 +61,33 @@ matrix:
       #compiler: clang
       #env: EXPORT_CC=clang-3.7 EXPORT_CXX=clang++-3.7 PACKAGE=clang-3.7  FL_USE_FLOAT=ON FL_CPP11=ON
 
-##clang-3.6
-    #- os: linux
-      #compiler: clang
-      #env: EXPORT_CC=clang-3.6 EXPORT_CXX=clang++-3.6 PACKAGE=clang-3.6   FL_USE_FLOAT=OFF FL_CPP11=OFF
-    #- os: linux
-      #compiler: clang
-      #env: EXPORT_CC=clang-3.6 EXPORT_CXX=clang++-3.6 PACKAGE=clang-3.6   FL_USE_FLOAT=ON FL_CPP11=OFF
-    #- os: linux
-      #compiler: clang
-      #env: EXPORT_CC=clang-3.6 EXPORT_CXX=clang++-3.6 PACKAGE=clang-3.6   FL_USE_FLOAT=OFF FL_CPP11=ON
-    #- os: linux
-      #compiler: clang
-      #env: EXPORT_CC=clang-3.6 EXPORT_CXX=clang++-3.6 PACKAGE=clang-3.6   FL_USE_FLOAT=ON FL_CPP11=ON
+#clang-3.6
+    - os: linux
+      compiler: clang
+      env: EXPORT_CXX=clang++-3.6 FL_CPP11=OFF FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: clang
+      env: EXPORT_CXX=clang++-3.6 FL_CPP11=OFF FL_USE_FLOAT=ON
+    - os: linux
+      compiler: clang
+      env: EXPORT_CXX=clang++-3.6 FL_CPP11=ON FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: clang
+      env: EXPORT_CXX=clang++-3.6 FL_CPP11=ON FL_USE_FLOAT=ON
 
-#clang-3.5
-    - os: linux
-      compiler: clang
-      env: EXPORT_CXX=clang++-3.5 FL_CPP11=OFF FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: EXPORT_CXX=clang++-3.5 FL_CPP11=OFF FL_USE_FLOAT=ON
-    - os: linux
-      compiler: clang
-      env: EXPORT_CXX=clang++-3.5 FL_CPP11=ON FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: EXPORT_CXX=clang++-3.5 FL_CPP11=ON FL_USE_FLOAT=ON
+##clang-3.5
+    #- os: linux
+      #compiler: clang
+      #env: EXPORT_CXX=clang++-3.5 FL_CPP11=OFF FL_USE_FLOAT=OFF
+    #- os: linux
+      #compiler: clang
+      #env: EXPORT_CXX=clang++-3.5 FL_CPP11=OFF FL_USE_FLOAT=ON
+    #- os: linux
+      #compiler: clang
+      #env: EXPORT_CXX=clang++-3.5 FL_CPP11=ON FL_USE_FLOAT=OFF
+    #- os: linux
+      #compiler: clang
+      #env: EXPORT_CXX=clang++-3.5 FL_CPP11=ON FL_USE_FLOAT=ON
 
 
 #g++-5
